Fixed uneven padding on + symbol

--- a/src/css/fraidy.scss
+++ b/src/css/fraidy.scss
@@ -173,7 +173,7 @@ div.intro {
     margin: 15px 5px;
 
     &.pink {
-      padding: 7px 9px;
+      padding: 6px 8px 3px;
       background-color: #FF0099;
       border-radius: 18px;
       font-weight: bold;
